# Trabalho-Final-Maconha

./: .gitignore  README.md  build.sh  db.sqlite3  manage.py  pyproject.toml  pytest.ini  render.yaml  requirements.txt
Pai_do_Verde/: asgi.py  settings.py  urls.py  wsgi.py
api_frontend/: index.html  script.js
media/plantas/: images.jfif
plantaas/: admin.py  apps.py  models.py  tests.py
plantaas/migrations/: 0001_initial.py
plantas/: admin.py  apps.py  context_processors.py  forms.py  models.py  serializers.py  signals.py  tests.py  urls.py  views.py  viewsets.py
plantas/migrations/: 0001_initial.py  0002_comentario_delete_dicacultivo.py  0003_denuncia_userprofile_favoritoplanta_likeplanta_and_more.py  0004_badge_userbadge.py  0005_notificacao.py  0006_conquista_enquete_lembrete_mensagem_opcaoenquete_and_more.py
plantas/templates/plantas/: _card_planta.html  adicionar_entrada_diario.html  busca.html  colecoes.html  confirmar_exclusao.html  criar_colecao.html  dashboard.html  detalhe_planta.html  diario.html  editar_perfil.html  feed.html  form_comentario.html  form_denuncia.html  form_planta.html  lista_plantas.html  notificacoes.html  perfil.html  ranking.html  ver_colecao.html
plantas/templatetags/: notificacoes_tags.py
static/css/: global.css  osm-base.css  osm-components.css  osm-header.css  osm-reset.css  osm-style.css  osm-variables.css
templates/: base.html
templates/registration/: logged_out.html  login.html  signup.html
trabalho_final/: asgi.py  settings.py  urls.py  wsgi.py
