[tool.poetry]
name = "pai-do-verde"
version = "0.1.0"
description = ""
authors = ["Seu Nome <seu@email.com>"]
packages = [{include = "trabalho_final"}]

[tool.poetry.dependencies]
python = "^3.10"
Django = "5.2.8"
djangorestframework = "3.16.1"
django-cors-headers = "4.9.0"
django-bootstrap5 = "25.3"
Pillow = "12.0.0"
whitenoise = "6.11.0"
gunicorn = "21.0.0"
dj-database-url = "3.0.1"
psycopg2-binary = "2.9.11"
cloudinary = "1.44.1"
django-cloudinary-storage = "0.3.0"
requests = "2.32.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"